# vse

./: CMakeLists.txt
laba1popytka3/: CMakeLists.txt  func.h  task1.c  task2.c  task3.c  task4.c  task5_func.c  task5_main.c  task6_func.c  task6_main.c  task7_func.c  task7_main.c
laba2/: CMakeLists.txt  main.c  task1.c  task2.c
laba3do_while/: CMakeLists.txt  main.c  task1_do_while.c  task2_do_while.c  task3_do_while.c  task4_do_while.c  task5_do_while.c
laba3for/: CMakeLists.txt  main2.c  task1_for.c  task2_for.c  task3_for.c  task4_for.c  task5_for.c
laba3while/: CMakeLists.txt  main3.c  task1_while.c  task2_while.c  task3_while.c  task4_while.c  task5_while.c
laba5/: CMakeLists.txt  head.h  main.c  task1.c  task3.c  task4.c  task5.c  task6.c
laba6/: CMakeLists.txt  head.h  main.c
laba7/: CMakeLists.txt  laba7.c
laboratornaya4/: CMakeLists.txt  laba4.c
