# CMakeList.txt: проект CMake для vsevmeste; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_subdirectory("laba1popytka3")
add_subdirectory("laba2")
add_subdirectory("laba3do_while")
add_subdirectory("laba3for")
add_subdirectory("laba3while")
add_subdirectory("laboratornaya4")
add_subdirectory("laba5")
add_subdirectory("laba6")
add_subdirectory("laba7")


# TODO: Добавьте тесты и целевые объекты, если это необходимо.
