# CMakeList.txt: проект CMake для laba3do_while; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)
project("laba3do_while")
# Добавьте источник в исполняемый файл этого проекта.
add_executable (laba3_do_while "main.c" "task1_do_while.c" "task2_do_while.c" "task3_do_while.c" "task4_do_while.c" "task5_do_while.c")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
