# CMakeList.txt: проект CMake для laba3while; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)
project("laba3while")
# Добавьте источник в исполняемый файл этого проекта.
add_executable (laba3_while "main3.c" "task1_while.c" "task2_while.c" "task3_while.c" "task4_while.c" "task5_while.c")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
