# CMakeList.txt: проект CMake для laba5; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)
project("laba5")
# Добавьте источник в исполняемый файл этого проекта.
add_executable (laba_5 "main.c" "task1.c" "task2.c" "task3.c" "task4.c" "task5.c" "task6.c")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
