# CMakeList.txt: проект CMake для laboratornaya4; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)
project("laboratornaya4")
# Добавьте источник в исполняемый файл этого проекта.
add_executable (laboratornaya_4 "laba4.c")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
